--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gatsby-plugin-google-analytics": "2.0.5",
     "gatsby-plugin-react-helmet": "3.0.0",
     "gatsby-plugin-resolve-src": "2.0.0-beta.1",
-    "gatsby-plugin-sharp": "2.0.5",
+    "gatsby-plugin-sharp": "4",
     "gatsby-plugin-sitemap": "2.0.1",
     "gatsby-remark-autolink-headers": "2.0.0-beta.5",
     "gatsby-remark-copy-linked-files": "2.0.5",
@@ -34,7 +34,7 @@
     "gatsby-remark-smartypants": "2.0.5",
     "gatsby-source-filesystem": "2.0.1",
     "gatsby-transformer-remark": "2.1.1",
-    "gatsby-transformer-sharp": "2.1.1",
+    "gatsby-transformer-sharp": "^4.4.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
